--- a/style.css
+++ b/style.css
@@ -2,9 +2,6 @@
 @media(max-width: 480px) {
     /*Colours*/
   html {
-    background: url(images/pattern-background-mobile.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
     font-size: 100%;
     width: 100%;
     -webkit-box-sizing: border-box;
@@ -17,6 +14,9 @@
   }
 
   body {
+    background: url(images/pattern-background-mobile.svg);
+    background-size: 100%;
+    background-repeat: no-repeat;
     margin: 0;
     padding: 0;
     font-family: 'Red Hat Display', sans-serif;
