--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 @media(max-width: 480px) {
     /*Colours*/
   html {
+    background: url(images/pattern-background-mobile.svg);
+    background-color: hsl(225, 100%, 94%);
+    background-size: 100%;
+    background-repeat: no-repeat;
     font-size: 100%;
     width: 100%;
     -webkit-box-sizing: border-box;
@@ -14,9 +18,6 @@
   }
 
   body {
-    background: url(images/pattern-background-mobile.svg);
-    background-size: 100%;
-    background-repeat: no-repeat;
     margin: 0;
     padding: 0;
     font-family: 'Red Hat Display', sans-serif;
